[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netscanner"
version = "0.1.0"
description = "CLI defensiva para auditoria de rede com Nmap, Loguru, Click e Pydantic."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "soullesss" }
]
dependencies = [
  "click>=8.1.7",
  "loguru>=0.7.2",
  "pydantic>=2.7.1",
  "python-nmap>=0.7.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0"
]

[project.scripts]
netscanner = "netscanner.cli:cli"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
